--- a/index.html
+++ b/index.html
@@ -4,7 +4,56 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leapflow</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="white"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="black"
+    />
+    <meta
+      name="description"
+      content="Your AI Agent to supercharge workflow."
+    />
+    <meta
+      name="keywords"
+      content="leapflow, ai, generative ai, ai agent, automation, productivity, workflow, supercharge"
+    />
+    <meta property="og:title" content="Leapflow" />
+    <meta
+      property="og:description"
+      content="Your AI Agent to supercharge workflow."
+    />
+    <meta property="og:url" content="https://leapflow.tech" />
+    <meta property="og:site_name" content="Leapflow" />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:image"
+      content="https://leapflow.tech/og.png"
+    />
+    <meta property="og:image:width" content="2880" />
+    <meta property="og:image:height" content="1800" />
+    <meta property="og:image:alt" content="Leapflow" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@leapflowhq" />
+    <meta name="twitter:title" content="Leapflow" />
+    <meta
+      name="twitter:description"
+      content="Your AI Agent to supercharge workflow."
+    />
+    <meta
+      name="twitter:image"
+      content="https://leapflow.tech/og.png"
+    />
+    <meta name="twitter:image:width" content="2880" />
+    <meta name="twitter:image:height" content="1800" />
+    <meta name="twitter:image:alt" content="Leapflow" />
+    <title>Leapflow - Your AI Agent to supercharge workflow</title>
   </head>
   <body>
     <div id="root"></div>
